force-app/main/default/objects/Opportunity_LineItem_Mapping__mdt/Opportunity_LineItem_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity LineItem Mapping</label>
    <pluralLabel>Opportunity LineItem Mappings</pluralLabel>
</CustomObject>