force-app/main/default/objects/Opportunity_LineItem_Mapping__mdt/fields/Job_Field__c.field-meta.xml
<CustomField>
    <fullName>Job_Field__c</fullName>
    <label>Job Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>