force-app/main/default/objects/Opportunity_LineItem_Mapping__mdt/fields/LineItem_Field__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Field__c</fullName>
    <label>LineItem Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>